# npg_porch

./: .flake8  .gitignore  CHANGELOG.md  LICENSE.txt  README.md  openapi.json  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: python-app.yml
docker/: Dockerfile.dev  README.md  logging.json
docker/scripts/: configure_database_service.sh  create_database.sh  entrypoint.sh  insert_admin_token.sh
docs/: user_guide.md
scripts/: deploy_schema.py  issue_token.py
server/: deploy_schema.py  logging.json  main.py  main_config.py
server/npg/porch/auth/: token.py
server/npg/porchdb/: auth.py  connection.py  data_access.py  db.py
server/tests/: conftest.py  data_access_test.py  db_auth_test.py  db_task_test.py  db_token_test.py  init_test.py  model_permission_test.py  pipeline_route_test.py  task_route_test.py
server/tests/fixtures/: deploy_db.py  orm_session.py
src/npg/porchdb/: auth.py  connection.py  data_access.py
src/npg_porch/: server.py
src/npg_porch/auth/: token.py
src/npg_porch/db/: auth.py  connection.py  data_access.py
src/npg_porch/endpoints/: pipelines.py  tasks.py  ui.py
src/npg_porch/models/: __init__.py  config.py  event.py  permission.py  pipeline.py  task.py  token.py
src/npg_porch/templates/: about.j2  index.j2  listing.j2
tests/: conftest.py  data_access_test.py  db_auth_test.py  db_task_test.py  db_token_test.py  init_test.py  model_permission_test.py  pipeline_route_test.py  task_model_test.py  task_route_test.py  ui_route_test.py
tests/fixtures/: deploy_db.py  orm_session.py
(+25 files in other folders)
