[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "npg_porch"
requires-python = ">=3.8"
authors = [{name="Marina Gourtovaia", email="mg8@sanger.ac.uk"}, {name="Kieron Taylor", email="kt19@sanger.ac.uk"}]
description = "API server for tracking unique workflow executions"
readme = "README.md"
license = {file = "LICENSE.md"}
dependencies = [
    "aiosqlite",
    "asyncpg",
    "fastapi",
    "pydantic < 2.0.0",
    "pysqlite3",
    "psycopg2-binary",
    "sqlalchemy >= 1.4.29, <2",
    "ujson",
    "uvicorn",
    "uuid"
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "requests",
    "flake8",
    "httpx"
]
