[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "npg_porch"
requires-python = ">=3.10"
authors = [{name="Marina Gourtovaia", email="mg8@sanger.ac.uk"}, {name="Kieron Taylor", email="kt19@sanger.ac.uk"}]
description = "API server for tracking unique workflow executions"
readme = "README.md"
license = {file = "LICENSE.md"}
dependencies = [
    "aiosqlite",
    "asyncpg",
    "fastapi",
    "pydantic > 2.0.0",
    "psycopg2-binary",
    "sqlalchemy >2",
    "ujson",
    "uvicorn",
    "uuid"
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pysqlite3",
    "pytest",
    "pytest-asyncio",
    "requests",
    "flake8",
    "httpx"
]
